# BA_Projekt_2024

csharpapp/AppClassLibrary/Enums/: ContentTypeEnum.cs
csharpapp/AppClassLibrary/Handlers/: FileHandler.cs
csharpapp/AppClassLibrary/Models/: FileObject.cs
csharpapp/wpf/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  app.manifest  wpf.csproj  wpf.sln
csharpapp/wpf/interfaces/: IContentProvider.cs
csharpapp/wpf/tabItems/: Calculator.axaml  Calculator.axaml.cs  Calculator.xaml  Calculator.xaml.cs  Notes.axaml  Notes.axaml.cs  Notes.xaml  Notes.xaml.cs  Tables.xaml  Tables.xaml.cs
flutterapp/: .metadata  README.md  pubspec.yaml
flutterapp/lib/: calc.dart  main.dart  notes.dart  tabs.dart
flutterapp/linux/: CMakeLists.txt
flutterapp/windows/runner/: Runner.rc
tab_qml/: CMakeLists.txt  Main.qml  main.cpp
tab_qml/content/: Calculator.qml  Editor.qml
tab_qml/qml/: texteditor.qml
tabflutter/: pubspec.yaml
tabflutter/lib/: calculator.dart  editor.dart  main.dart  quill_delta_sample.dart
tabflutter/linux/: CMakeLists.txt  my_application.cc
tabflutter/windows/: CMakeLists.txt
tabflutter/windows/runner/: Runner.rc  main.cpp
tabfx/: pom.xml
tabfx/src/main/java/: module-info.java
tabfx/src/main/java/at/jusefn/tabfx/: Calculator.java  Editor.java  HelloApplication.java  HelloController.java
tabfx/src/main/resources/at/jusefn/tabfx/: hello-view.fxml
